--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
